[project]
name = "image-gen-mcp"
version = "0.1.0"
description = "MCP Server for Image Generation using Stable Diffusion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffusers>=0.33.1",
    "transformers>=4.51.2",
    "accelerate>=1.6.0",
    "torch>=2.6.0",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
    "Pillow>=11.2.1",
    "tqdm>=4.67.1",
]

[project.scripts]
image-gen-mcp = "image_gen_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 